apps/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-pod
  template:
    metadata:
      labels:
        app: keycloak-pod
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:16.1.1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 100m
            memory: 512Mi
        ports:
        - containerPort: 8080
