apps/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak-pod
spec:
  ports:
    - port: 8080
  selector:
    app: keycloak-pod
  type: ClusterIP
